# cat-doorbell-v3-esp32-s3-eye-audio-test

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  audio_preprocessor_int8_model_data.h  audio_provider.cc  cat_sounds.c  cat_sounds.cc  cat_sounds.h  eml_meow.c  eml_meow.h  feature_provider.cc  idf_component.yml  main.cpp  main_functions.cc  micro_features_generator.cc  micro_model_settings.h  model.cc  recognize_commands.cc  sd_card_provider.cc  sd_card_provider.h
test_data/: CMakeLists.txt
